--- a/fv copy.css
+++ b/fv copy.css
@@ -53,35 +53,58 @@ header,
   margin-bottom: 5px;
   margin-top: 0;
   margin-left: 10px;
-
 }
 
+.main-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.main-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-end;
+  list-style: none;
+}
+
+.main-nav a {
+  padding: 20px;
+  text-decoration: none;
+  font-family: verdana, sans-serif;
+  color: black;
+  font-size:16px;
+}
+
+
+.dropdown ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
 /* Style The Dropdown Button */
 
  .dropbtn {
   background-color: white;
   color: black;
-  padding: 0px;
+  padding: 0;
   font-size: 16px;
-  font-family: "mukta", sans-serif;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
+  font-family: verdana, sans-serif;
+  list-style: none;
 }
 
 .dropdown-content {
  display: none;
  position: absolute;
- box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+ box-shadow: 0px 8px 16px 0px rgba(0,0,0,10);
  z-index: 1;
 }
 
-.dropdown-content a, nav a {
+.dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -89,15 +112,21 @@ header,
   font-family: verdana;
 }
 
-.dropbtn:hover {background-color: white}
+.dropdown-content a:hover {
+  background-color: firebrick;
+}
+
+/* .dropbtn:hover {background-color: white} */
 
 .dropdown:hover  .dropdown-content  {
   display: block;
   width: 150px;
 }
 
-.dropdown:hover .dropbtn {
+.dropdown a {
   background-color:  white;
+  text-align: center;
+  font-family: verdana;
 }
 
 /* end dropdown style */
@@ -147,21 +176,6 @@ figcaption {
   margin: 0 auto;
 }
 
-}
-
-.dropdown a {
-  padding: 10px 15px;
-  width: 100px;
-  text-align: center;
-}
-
-.dropdown a {
-  background-color:  white;
-  text-align: center;
-  font-family: 'Mukta';
-}
-
-
 .main-footer a {
   text-decoration: none;
   color: white;
@@ -178,13 +192,6 @@ figcaption {
   border-top: solid firebrick 2px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 4);
 }
-
-
-.dropdown a:link {
-  text-decoration: none;
-  margin: 5px;
-}
-
 
 .services {
   width: 90%;
@@ -212,6 +219,8 @@ figcaption {
   flex: 1;
 }
 
+
+
 /* .photo-break {
 display: flex;
 width: 100%;
@@ -234,34 +243,36 @@ justify-content: space-between;
   min-height: calc(100vh - 40px);
   }
 
-  header img,
+
+
+  /* header img,
  .dropdown a {
    display: block;
    text-align: center;
    padding: 10px 15px;
-  }
+  } */
 
-  .dropdown a, nav .dropdown {
+  /* .dropdown a, nav .dropdown {
     display: block;
     text-align: center;
-  }
+  } */
 
-  .dropdown a {
+  /* .dropdown a {
     float: right;
-  }
+  } */
 
   /* p {
   font-family: verdana;
   } */
 
 
-  header img {
+  /* header img {
     float: left;
-  }
+  } */
 
-  nav {
+  /* nav {
     margin-top: 20px;
-  }
+  } */
 
   .title-banner {
     color: black;
@@ -276,7 +287,7 @@ justify-content: space-between;
 
   .title-banner h1 {
       color: #fff;
-    
+
       width: 80%;
       margin: auto;
       text-align: center;
