--- a/stylesheets/firstview-lettings.css
+++ b/stylesheets/firstview-lettings.css
@@ -29,7 +29,7 @@ svg {
   font-family: "Lato", sans-serif, "Helvetica Neue", sans-serif;
 }
 
-/*                      MAIN HEADER STYLING            */
+/* MAIN HEADER STYLING */
 header {
   display: flex;
   flex-direction: row;
@@ -83,7 +83,7 @@ header > div {
   text-align: center;
 }
 
-/*      END MAIN HEADER                  */
+/* END MAIN HEADER */
 .details-heading,
 .index-subheading,
 .landlordcard-heading,
@@ -110,8 +110,8 @@ header > div {
   background-position: center;
   height: 450px;
   font-family: 'Raleway', sans-serif;
-  color: #fff;
   text-align: center;
+  color: #fff;
 }
 
 .index-title h1 {
@@ -119,6 +119,11 @@ header > div {
   margin: auto;
   padding-top: 150px;
   font-size: 3em;
+  text-shadow: -1px 1px 1px #444445;
+}
+
+.card {
+  box-shadow: 0px 3px 2px #f5f5f7;
 }
 
 .services-landing, .landlord-landing {
@@ -146,6 +151,7 @@ header > div {
 
 .index-main {
   display: flex;
+  flex-wrap: wrap;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -157,7 +163,11 @@ header > div {
 }
 
 .introduction {
-  flex: 1 70%;
+  width: 58%;
+}
+
+.index-main div:last-child {
+  width: 42%;
 }
 
 .red-line {
@@ -165,11 +175,7 @@ header > div {
   border-top: solid 3px firebrick;
 }
 
-.btn {
-  color: white;
-}
-
-/*  Begin card deck styling  */
+/* Begin card deck styling */
 .card-deck {
   padding: 30px;
   margin-bottom: 25px;
@@ -177,6 +183,32 @@ header > div {
 
 .card-img-top {
   height: 320px;
+}
+
+.card-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.more-info {
+  width: 60%;
+  background-color: #fff;
+  border: 1px solid #0b2149;
+  color: #0b2149;
+  border-radius: .25em;
+  padding: .375rem .75rem;
+  text-align: center;
+  margin: 2px;
+  font-size: 0.9em;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.more-info:hover {
+  text-decoration: none;
+  color: #fff;
+  background-color: #0b2149;
 }
 
 /* end card deck styling */
@@ -196,11 +228,15 @@ header > div {
 
 .landlord-card {
   display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .landlord-card > div {
+  display: flex;
   border: solid gainsboro 1px;
-  width: 25%;
+  min-width: 22%;
+  width: 23%;
   padding: 10px;
   box-shadow: 0 4px 3px 0;
   margin: 50px 10px 50px 0;
@@ -209,12 +245,17 @@ header > div {
   font-size: 1em;
   padding-bottom: 25px;
   text-align: center;
+  transition: transform .5s ease-out;
+  flex-direction: column;
+}
+
+.landlord-card > div > span {
+  margin-top: auto;
 }
 
 .landlord-card > div:hover {
   box-shadow: 0 6px 6px 0;
   transform: translateY(-20px);
-  transition: transform 0.5s;
   border-bottom: firebrick solid 4px;
 }
 
@@ -237,6 +278,7 @@ header > div {
 .property-card {
   justify-content: center;
   display: flex;
+  flex-wrap: wrap;
   width: 80%;
   margin: 2em auto;
   padding: 40px 20px 20px;
@@ -352,8 +394,8 @@ header > div {
   color: #0b2149;
 }
 
-#features-tab,
 #secondcarousel,
+#features-tab,
 #services-tab,
 .accordion {
   display: none;
@@ -472,8 +514,7 @@ select {
 
 div .details {
   padding: 20px;
-  border-top: solid 2px firebrick;
-  border-left: solid 2px firebrick;
+  border: solid 2px firebrick;
   line-height: 20px;
   flex: 2;
   margin-top: 75px;
@@ -552,19 +593,84 @@ div .details {
   text-decoration-style: none;
 }
 
+.errorpage {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 1.5rem;
+}
+
+.errorpage a {
+  width: 15;
+  background-color: firebrick;
+  border: 1px solid firebrick;
+  color: #fff;
+  border-radius: .25em;
+  padding: .375rem .75rem;
+  text-align: center;
+  margin: 2px;
+  font-size: 0.9em;
+  display: inline-block;
+}
+
+#sitemap-title {
+  text-align: center;
+  color: #0b2149;
+  padding-top: 30px;
+  font-size: 2.8em;
+}
+
+.sitemap a {
+  line-height: 30px;
+  color: #0b2149;
+  font-size: 1.2em;
+}
+
+.sitemap a:hover {
+  padding-bottom: 2px;
+  box-shadow: inset 0 -0.4rem 0 0 firebrick;
+  text-decoration: none;
+}
+
+@media (max-width: 1075px) {
+  #about,
+  #contact,
+  #landlords,
+  #properties,
+  #tenants, #home,
+  .hide-sm,
+  nav .dropdown-toggle {
+    display: none;
+  }
+  #services-tab, #features-tab {
+    display: inline-block;
+  }
+  .accordion {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  #secondcarousel {
+    display: block;
+  }
+}
+
 @media (max-width: 950px) {
   .index-title > h1 {
     padding-top: 5rem;
+    font-size: 2.5rem;
   }
   .index-main {
     margin: 0 auto;
   }
-  .index-main:last-child,
+  .landlord-card {
+    justify-content: space-around;
+  }
+  .landlordcard-heading {
+    font-size: 1.3em;
+  }
+  .index-main div:last-child,
   .introduction {
     width: 100%;
-  }
-  .services-landing, .landlord-landing {
-    margin-top: 8rem;
   }
   .subp-title {
     padding: 3.5rem 0 1rem;
@@ -576,6 +682,16 @@ div .details {
   .leftfloat a:last-child,
   .rightfloat a:last-child {
     border: 1px solid grey;
+  }
+}
+
+@media (max-width: 725px) {
+  .services-index {
+    padding-top: 40px;
+  }
+  .landlord-card > div {
+    width: 90%;
+    margin: 10px 5px;
   }
 }
 
@@ -603,19 +719,6 @@ div .details {
   .dropdown-item {
     font-size: 0.8em;
   }
-  #features-tab,
-  #services-tab {
-    display: inline-block;
-  }
-  #about,
-  #contact,
-  #landlords,
-  #properties,
-  #tenants,
-  .hide-sm,
-  nav .dropdown-toggle {
-    display: none;
-  }
   .index-title {
     font-size: 0.5em;
     height: 330px;
@@ -636,17 +739,9 @@ div .details {
     padding-top: 1.5rem;
     font-size: 2rem;
   }
-  .index-main {
-    flex-wrap: wrap;
-    width: 100%;
-    font-size: 16px;
-  }
   .introduction,
   .leftfloat,
-  .rightfloat {
-    width: 100%;
-  }
-  .leftfloat-buttons,
+  .rightfloat, .leftfloat-buttons,
   .rightfloat-buttons, .view-cta, .about-btn {
     width: 100%;
   }
@@ -656,9 +751,6 @@ div .details {
     margin: 0 auto;
     justify-content: center;
   }
-  #secondcarousel {
-    display: block;
-  }
   .center {
     font-size: 1.2em;
   }
@@ -666,27 +758,13 @@ div .details {
     padding: 5px;
   }
   .property-card {
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-  .landlord-card {
-    display: flex;
     flex-direction: column;
   }
   .landlord-card > div {
     width: 90%;
-    margin: 10px auto 5px;
-  }
-  .landlord-card > div:last-child {
-    margin-bottom: 20px;
   }
   .block {
     padding-top: 25px;
-  }
-  .accordion {
-    display: block;
-    margin-top: 30px;
-    margin-bottom: 30px;
   }
   .btn_group {
     display: flex;
